--- a/lmnet/tox.ini
+++ b/lmnet/tox.ini
@@ -21,6 +21,9 @@ commands = flake8 .
 [testenv:pytest]
 commands = pytest tests/
 
+[testenv:single-pytest]
+commands = pytest {posargs}
+
 [testenv:py36-pytest]
 commands = {[testenv:pytest]commands}
 
