Changing command to `pytest-only`

--- a/lmnet/tox.ini
+++ b/lmnet/tox.ini
@@ -21,7 +21,7 @@ commands = flake8 .
 [testenv:pytest]
 commands = pytest tests/
 
-[testenv:single-pytest]
+[testenv:pytest-only]
 commands = pytest {posargs}
 
 [testenv:py36-pytest]
