--- a/docs/Makefile
+++ b/docs/Makefile
@@ -15,6 +15,12 @@ help:
 pip:
 	pip install -r requirements.txt
 
+python:
+	cd python; PYTHONPATH=../../dlk/python/dlk make html
+
+pyclean:
+	cd python; make clean
+
 # Catch-all target: route all unknown targets to Sphinx using the new
 # "make mode" option.  $(O) is meant as a shortcut for $(SPHINXOPTS).
 %: Makefile pip
