parallelized lmnet test without GPU

--- a/lmnet/tox.ini
+++ b/lmnet/tox.ini
@@ -21,11 +21,17 @@ commands = flake8 .
 [testenv:pytest]
 commands = pytest tests/
 
+[testenv:pytest-parallel]
+commands = pytest -n auto tests/
+
 [testenv:pytest-only]
 commands = pytest {posargs}
 
 [testenv:py36-pytest]
 commands = {[testenv:pytest]commands}
+
+[testenv:py36-pytest-parallel]
+commands = {[testenv:pytest-parallel]commands}
 
 [testenv:check_dataset_storage]
 commands = pytest tests/check_dataset_storage.py
