add e2e test for GPU env

--- a/.buildkite/blueoil-pipeline.yml
+++ b/.buildkite/blueoil-pipeline.yml
@@ -1,4 +1,12 @@
 steps:
+  - command: "make test-gpu"
+    label: "GPU Test"
+    agents:
+    - "agent-type=gpu"
+    - "env=production"
+    timeout_in_minutes: "30"
+    env:
+      BUILDKITE_CLEAN_CHECKOUT: 'true'
   - command: "make test-classification"
     label: "classification"
     agents:
