Fix missing compile options

--- a/dlk/python/dlk/templates/Makefile
+++ b/dlk/python/dlk/templates/Makefile
@@ -162,7 +162,7 @@ ar_x86:           NAME = x86
 
 ar_x86_avx:       AR = ar
 ar_x86_avx:       CXX = g++
-ar_x86_avx:       FLAGS += $(INCLUDES) -O3 -std=c++14 -fPIC -fvisibility=hidden -DUSE_AVX -pthread -g -fopenmp
+ar_x86_avx:       FLAGS += $(INCLUDES) -O3 -std=c++14 -fPIC -fvisibility=hidden -DUSE_AVX -mavx2 -mfma -pthread -g -fopenmp
 ar_x86_avx:       LDFLAGS += -rcs
 ar_x86_avx:       NAME = x86_avx
 
