--- a/lmnet/tox.ini
+++ b/lmnet/tox.ini
@@ -8,6 +8,7 @@ skipsdist = True
 recreate = True
 deps =
     -r{toxinidir}/../gpu.requirements.txt
+setenv = PYTHONPATH = $PYTHONPATH:.
 passenv = DATA_DIR CUDA_VISIBLE_DEVICES
 commands =
     flake8 .
