Change dependency description

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -98,10 +98,9 @@ RUN pip install -U pip setuptools
 
 FROM base AS blueoil-base
 # Install requirements
-# We need to install cython and numpy before "pip install -r" for pycocotools
-RUN pip install --upgrade cython==0.27.3 numpy==1.17.4
 COPY ./*requirements.txt /home/blueoil/
 RUN pip install -r /home/blueoil/gpu.requirements.txt
+RUN pip install pycocotools==2.0.0
 
 # Set env to install horovod with nccl and tensorflow option
 ENV HOROVOD_GPU_ALLREDUCE=NCCL \
