add pycocotools dependency to tox.ini

--- a/lmnet/tox.ini
+++ b/lmnet/tox.ini
@@ -8,6 +8,7 @@ skipsdist = True
 recreate = True
 deps =
     -r{toxinidir}/../gpu.requirements.txt
+    pycocotools==2.0.0
 setenv = PYTHONPATH = $PYTHONPATH:.
 passenv = DATA_DIR CUDA_VISIBLE_DEVICES
 commands =
