Change pycocotools dependency, submodule to requirements.txt (#775)

--- a/lmnet/tox.ini
+++ b/lmnet/tox.ini
@@ -8,7 +8,8 @@ skipsdist = True
 recreate = True
 deps =
     -r{toxinidir}/../gpu.requirements.txt
-setenv = PYTHONPATH = $PYTHONPATH:.:third_party/coco/PythonAPI/
+    pycocotools==2.0.0
+setenv = PYTHONPATH = $PYTHONPATH:.
 passenv = DATA_DIR CUDA_VISIBLE_DEVICES
 commands =
     flake8 .
@@ -47,7 +48,6 @@ exclude =
     __pycache__,
     ansible,
     docs,
-    third_party,
 
 [pep8]
 max-line-length = 120
