Remove check-dataset-storage test

--- a/lmnet/tox.ini
+++ b/lmnet/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 envlist =
-    py36-{pytest, check_dataset_storage},
+    py36-pytest,
     flake8
 skipsdist = True
 
@@ -33,12 +33,6 @@ commands = {[testenv:pytest]commands}
 
 [testenv:py36-pytest-parallel]
 commands = {[testenv:pytest-parallel]commands}
-
-[testenv:check_dataset_storage]
-commands = pytest tests/check_dataset_storage.py
-
-[testenv:py36-check_dataset_storage]
-commands = {[testenv:check_dataset_storage]commands}
 
 [flake8]
 max-line-length = 120
