--- a/dlk/examples/segmentation/lm_segnet_v1_quantize_camvid/config.yaml
+++ b/dlk/examples/segmentation/lm_segnet_v1_quantize_camvid/config.yaml
@@ -33,7 +33,7 @@ DATASET:
   PRE_PROCESSOR: !!python/object:lmnet.data_processor.Sequence
     processors:
     - !!python/object:lmnet.pre_processor.DivideBy255 {}
-DATASET_CLASS: !!python/name:lmnet.datasets.camvid.Camvid ''
+DATASET_CLASS: !!python/name:blueoil.nn.datasets.camvid.Camvid ''
 DATA_FORMAT: NHWC
 IMAGE_SIZE:
 - 360
