--- a/dlk/examples/classification/lmnet_quantize_cifar10/config.yaml
+++ b/dlk/examples/classification/lmnet_quantize_cifar10/config.yaml
@@ -34,7 +34,7 @@ DATASET:
       - 32
       - 32
     - !!python/object:lmnet.pre_processor.DivideBy255 {}
-DATASET_CLASS: !!python/name:lmnet.datasets.cifar10.Cifar10 ''
+DATASET_CLASS: !!python/name:blueoil.nn.datasets.cifar10.Cifar10 ''
 DATA_FORMAT: NHWC
 IMAGE_SIZE:
 - 32
