--- a/dlk/examples/object_detection/fyolo_quantize_4_v4/config.yaml
+++ b/dlk/examples/object_detection/fyolo_quantize_4_v4/config.yaml
@@ -133,7 +133,7 @@ NETWORK:
   WEIGHT_DECAY_RATE: 0.0005
   WEIGHT_QUANTIZER: !!python/name:lmnet.quantizations.binary.binary_channel_wise_mean_scaling_quantizer ''
   WEIGHT_QUANTIZER_KWARGS: {}
-NETWORK_CLASS: !!python/name:lmnet.networks.object_detection.fyolo_v4.FYoloQuantize ''
+NETWORK_CLASS: !!python/name:blueoil.nn.networks.object_detection.fyolo_v4.FYoloQuantize ''
 NMS: !!python/name:lmnet.post_processor.NMS ''
 POST_PROCESSOR: !!python/object:lmnet.data_processor.Sequence
   processors:
