--- a/dlk/examples/classification/lmnet_quantize_cifar10/config.yaml
+++ b/dlk/examples/classification/lmnet_quantize_cifar10/config.yaml
@@ -72,7 +72,7 @@ NETWORK:
   WEIGHT_DECAY_RATE: 0.0005
   WEIGHT_QUANTIZER: !!python/name:lmnet.quantizations.binary.binary_mean_scaling_quantizer ''
   WEIGHT_QUANTIZER_KWARGS: {}
-NETWORK_CLASS: !!python/name:blueoil.nn.networks.classification.lmnet_v1.LmnetV1Quantize ''
+NETWORK_CLASS: !!python/name:blueoil.networks.classification.lmnet_v1.LmnetV1Quantize ''
 POST_PROCESSOR: null
 PRETRAIN_DIR: ''
 PRETRAIN_FILE: ''
