--- a/dlk/examples/classification/lmnet_v1_toy_graph/config_dlk.yaml
+++ b/dlk/examples/classification/lmnet_v1_toy_graph/config_dlk.yaml
@@ -62,7 +62,7 @@ NETWORK:
   WEIGHT_DECAY_RATE: 0.0005
   WEIGHT_QUANTIZER: lmnet.quantizations.binary.binary_mean_scaling_quantizer
   WEIGHT_QUANTIZER_KWARGS: {}
-NETWORK_CLASS: blueoil.nn.networks.classification.lmnet_v1.LmnetV1Quantize
+NETWORK_CLASS: blueoil.networks.classification.lmnet_v1.LmnetV1Quantize
 PRETRAIN_DIR: ''
 PRETRAIN_FILE: ''
 PRETRAIN_VARS: []
