--- a/dlk/examples/object_detection/fyolo_quantize_17_v14_some_1x1_wide_pact_add_conv/config.yaml
+++ b/dlk/examples/object_detection/fyolo_quantize_17_v14_some_1x1_wide_pact_add_conv/config.yaml
@@ -131,7 +131,7 @@ NETWORK:
   WEIGHT_DECAY_RATE: 0.0005
   WEIGHT_QUANTIZER: !!python/name:lmnet.quantizations.binary.binary_channel_wise_mean_scaling_quantizer ''
   WEIGHT_QUANTIZER_KWARGS: {}
-NETWORK_CLASS: !!python/name:blueoil.nn.networks.object_detection.fyolo_v14.FYoloQuantize ''
+NETWORK_CLASS: !!python/name:blueoil.networks.object_detection.fyolo_v14.FYoloQuantize ''
 NMS: !!python/name:lmnet.post_processor.NMS ''
 POST_PROCESSOR: !!python/object:lmnet.data_processor.Sequence
   processors:
