--- a/blueoil/configs/example/classification.yaml
+++ b/blueoil/configs/example/classification.yaml
@@ -87,6 +87,6 @@ PRE_PROCESSOR: !!python/object:lmnet.data_processor.Sequence
   - !!python/object:lmnet.pre_processor.PerImageStandardization {}
 SAVE_CHECKPOINT_STEPS: 100
 SUMMARISE_STEPS: 10
-TASK: !!python/object/apply:lmnet.common.Tasks
+TASK: !!python/object/apply:blueoil.common.Tasks
 - IMAGE.CLASSIFICATION
 TEST_STEPS: 100
