--- a/dlk/examples/classification/lmnet_quantize_cifar10_stride_2.20180523.3x3/config.yaml
+++ b/dlk/examples/classification/lmnet_quantize_cifar10_stride_2.20180523.3x3/config.yaml
@@ -2,17 +2,17 @@ BATCH_SIZE: 1
 DATASET:
   AUGMENTOR: !!python/object:lmnet.data_processor.Sequence
     processors:
-    - !!python/object:lmnet.data_augmentor.Pad
+    - !!python/object:blueoil.data_augmentor.Pad
       bottom: 2
       fill: 0
       left: 2
       right: 2
       top: 2
-    - !!python/object:lmnet.data_augmentor.Crop
+    - !!python/object:blueoil.data_augmentor.Crop
       height: 32
       is_resize: false
       width: 32
-    - !!python/object:lmnet.data_augmentor.FlipLeftRight
+    - !!python/object:blueoil.data_augmentor.FlipLeftRight
       probability: 0.5
   BATCH_SIZE: 100
   PRE_PROCESSOR: !!python/object:lmnet.data_processor.Sequence
