--- a/dlk/examples/classification/lmnet_quantize_cifar10_stride_2.20180523.3x3/config_dlk.yaml
+++ b/dlk/examples/classification/lmnet_quantize_cifar10_stride_2.20180523.3x3/config_dlk.yaml
@@ -4,19 +4,19 @@ DATASET:
     lmnet.data_processor.Sequence:
       processors:
       - 
-        lmnet.data_augmentor.Pad:
+        blueoil.data_augmentor.Pad:
           bottom: 2
           fill: 0
           left: 2
           right: 2
           top: 2
       - 
-        lmnet.data_augmentor.Crop:
+        blueoil.data_augmentor.Crop:
           height: 32
           is_resize: false
           width: 32
       - 
-        lmnet.data_augmentor.FlipLeftRight:
+        blueoil.data_augmentor.FlipLeftRight:
           probability: 0.5
   BATCH_SIZE: 100
   PRE_PROCESSOR:
