Refactor extra requirements

--- a/setup.cfg
+++ b/setup.cfg
@@ -13,10 +13,39 @@ zip_safe = False
 include_package_data = True
 packages = find:
 install_requires =
-  prompt_toolkit==1.0.15
-  whaaaaat
   jinja2
-  pyyaml
+  click==6.7
+  easydict==1.6
+  matplotlib==2.2.2
+  numpy==1.17.4
+  pandas==0.19.2
+  Pillow==6.2.1
+  prompt_toolkit==1.0.15
+  pytablewriter==0.47.0
+  PyYAML==4.2b4
+  tensorflow-datasets==1.0.2
+  whaaaaat==0.5.2
+  cython==0.27.3
+
+[options.extras_require]
+cpu =
+  tensorflow==1.15.2
+gpu =
+  tensorflow-gpu==1.15.2
+  gast==0.2.2
+dist =
+  horovod==0.18.1
+  mpi4py==3.0.2
+docs =
+  better-apidoc==0.1.2
+  sphinx-rtd-theme==0.2.4
+  Sphinx==1.7.2
+  sphinx-autobuild==0.7.1
+test =
+  flake8==3.5.0
+  pytest==5.2.0
+  pytest-xdist==1.30.0
+  parameterized==0.7.0
 
 [options.entry_points]
 console_scripts =
