--- a/dlk/examples/segmentation/lm_segnet_v1_quantize_camvid/config.yaml
+++ b/dlk/examples/segmentation/lm_segnet_v1_quantize_camvid/config.yaml
@@ -57,7 +57,7 @@ NETWORK:
     learning_rate: 0.001
   WEIGHT_QUANTIZER: !!python/name:lmnet.quantizations.binary.binary_mean_scaling_quantizer ''
   WEIGHT_QUANTIZER_KWARGS: {}
-NETWORK_CLASS: !!python/name:lmnet.networks.segmentation.lm_segnet_v1.LmSegnetV1Quantize ''
+NETWORK_CLASS: !!python/name:blueoil.networks.segmentation.lm_segnet_v1.LmSegnetV1Quantize ''
 POST_PROCESSOR: null
 PRETRAIN_DIR: ''
 PRETRAIN_FILE: ''
