--- a/dlk/examples/object_detection/widerface_320/config.yaml
+++ b/dlk/examples/object_detection/widerface_320/config.yaml
@@ -112,7 +112,7 @@ NETWORK:
   WEIGHT_DECAY_RATE: 0.0005
   WEIGHT_QUANTIZER: !!python/name:lmnet.quantizations.binary.binary_channel_wise_mean_scaling_quantizer ''
   WEIGHT_QUANTIZER_KWARGS: {}
-NETWORK_CLASS: !!python/name:lmnet.networks.object_detection.lm_fyolo.LMFYoloQuantize ''
+NETWORK_CLASS: !!python/name:blueoil.networks.object_detection.lm_fyolo.LMFYoloQuantize ''
 NMS: !!python/name:lmnet.post_processor.NMS ''
 POST_PROCESSOR: !!python/object:lmnet.data_processor.Sequence
   processors:
