--- a/blueoil/configs/example/object_detection.yaml
+++ b/blueoil/configs/example/object_detection.yaml
@@ -21,7 +21,7 @@ CLASSES:
 - train
 - tvmonitor
 DATASET:
-  AUGMENTOR: !!python/object:lmnet.data_processor.Sequence
+  AUGMENTOR: !!python/object:blueoil.data_processor.Sequence
     processors:
     - !!python/object:blueoil.data_augmentor.FlipLeftRight
       probability: 0.5
@@ -60,7 +60,7 @@ DATASET:
         - null
   BATCH_SIZE: 16
   DATA_FORMAT: NCHW
-  PRE_PROCESSOR: !!python/object:lmnet.data_processor.Sequence
+  PRE_PROCESSOR: !!python/object:blueoil.data_processor.Sequence
     processors:
     - !!python/object:lmnet.pre_processor.ResizeWithGtBoxes
       size:
@@ -134,7 +134,7 @@ NETWORK:
   WEIGHT_QUANTIZER_KWARGS: {}
 NETWORK_CLASS: !!python/name:blueoil.networks.object_detection.yolo_v2_quantize.YoloV2Quantize ''
 NMS: !!python/name:lmnet.post_processor.NMS ''
-POST_PROCESSOR: !!python/object:lmnet.data_processor.Sequence
+POST_PROCESSOR: !!python/object:blueoil.data_processor.Sequence
   processors:
   - !!python/object:lmnet.post_processor.FormatYoloV2
     anchors:
@@ -189,7 +189,7 @@ POST_PROCESSOR: !!python/object:lmnet.data_processor.Sequence
 PRETRAIN_DIR: ''
 PRETRAIN_FILE: ''
 PRETRAIN_VARS: []
-PRE_PROCESSOR: !!python/object:lmnet.data_processor.Sequence
+PRE_PROCESSOR: !!python/object:blueoil.data_processor.Sequence
   processors:
   - !!python/object:lmnet.pre_processor.ResizeWithGtBoxes
     size:
