--- a/dlk/examples/classification/lmnet_quantize_cifar10/config.yaml
+++ b/dlk/examples/classification/lmnet_quantize_cifar10/config.yaml
@@ -11,7 +11,7 @@ CLASSES:
 - ship
 - truck
 DATASET:
-  AUGMENTOR: !!python/object:lmnet.data_processor.Sequence
+  AUGMENTOR: !!python/object:blueoil.data_processor.Sequence
     processors:
     - !!python/object:blueoil.data_augmentor.Pad
       bottom: 2
@@ -27,7 +27,7 @@ DATASET:
       probability: 0.5
   BATCH_SIZE: 1
   DATA_FORMAT: NHWC
-  PRE_PROCESSOR: !!python/object:lmnet.data_processor.Sequence
+  PRE_PROCESSOR: !!python/object:blueoil.data_processor.Sequence
     processors:
     - !!python/object:lmnet.pre_processor.Resize
       size:
@@ -77,7 +77,7 @@ POST_PROCESSOR: null
 PRETRAIN_DIR: ''
 PRETRAIN_FILE: ''
 PRETRAIN_VARS: []
-PRE_PROCESSOR: !!python/object:lmnet.data_processor.Sequence
+PRE_PROCESSOR: !!python/object:blueoil.data_processor.Sequence
   processors:
   - !!python/object:lmnet.pre_processor.Resize
     size:
