--- a/dlk/examples/classification/lmnet_quantize_cifar10_space_to_depth/config.yaml
+++ b/dlk/examples/classification/lmnet_quantize_cifar10_space_to_depth/config.yaml
@@ -1,6 +1,6 @@
 BATCH_SIZE: 1
 DATASET:
-  AUGMENTOR: !!python/object:lmnet.data_processor.Sequence
+  AUGMENTOR: !!python/object:blueoil.data_processor.Sequence
     processors:
     - !!python/object:blueoil.data_augmentor.Pad
       bottom: 2
@@ -15,7 +15,7 @@ DATASET:
     - !!python/object:blueoil.data_augmentor.FlipLeftRight
       probability: 0.5
   BATCH_SIZE: 200
-  PRE_PROCESSOR: !!python/object:lmnet.data_processor.Sequence
+  PRE_PROCESSOR: !!python/object:blueoil.data_processor.Sequence
     processors:
     - !!python/object:lmnet.pre_processor.Resize
       size:
