--- a/dlk/examples/object_detection/fyolo_quantize_17_v14_some_1x1_wide_pact_add_conv/config.yaml
+++ b/dlk/examples/object_detection/fyolo_quantize_17_v14_some_1x1_wide_pact_add_conv/config.yaml
@@ -21,7 +21,7 @@ CLASSES:
 - train
 - tvmonitor
 DATASET:
-  AUGMENTOR: !!python/object:lmnet.data_processor.Sequence
+  AUGMENTOR: !!python/object:blueoil.data_processor.Sequence
     processors:
     - !!python/object:blueoil.data_augmentor.FlipLeftRight
       probability: 0.5
@@ -61,7 +61,7 @@ DATASET:
   BATCH_SIZE: 1
   DATA_FORMAT: NHWC
   ENABLE_PREFETCH: true
-  PRE_PROCESSOR: !!python/object:lmnet.data_processor.Sequence
+  PRE_PROCESSOR: !!python/object:blueoil.data_processor.Sequence
     processors:
     - !!python/object:lmnet.pre_processor.ResizeWithGtBoxes
       size:
@@ -133,7 +133,7 @@ NETWORK:
   WEIGHT_QUANTIZER_KWARGS: {}
 NETWORK_CLASS: !!python/name:blueoil.networks.object_detection.fyolo_v14.FYoloQuantize ''
 NMS: !!python/name:lmnet.post_processor.NMS ''
-POST_PROCESSOR: !!python/object:lmnet.data_processor.Sequence
+POST_PROCESSOR: !!python/object:blueoil.data_processor.Sequence
   processors:
   - !!python/object:lmnet.post_processor.FormatYoloV2
     anchors:
@@ -188,7 +188,7 @@ POST_PROCESSOR: !!python/object:lmnet.data_processor.Sequence
 PRETRAIN_DIR: ''
 PRETRAIN_FILE: ''
 PRETRAIN_VARS: []
-PRE_PROCESSOR: !!python/object:lmnet.data_processor.Sequence
+PRE_PROCESSOR: !!python/object:blueoil.data_processor.Sequence
   processors:
   - !!python/object:lmnet.pre_processor.ResizeWithGtBoxes
     size:
