--- a/dlk/examples/object_detection/widerface_320/config.yaml
+++ b/dlk/examples/object_detection/widerface_320/config.yaml
@@ -2,7 +2,7 @@ BATCH_SIZE: 1
 CLASSES:
 - face
 DATASET:
-  AUGMENTOR: !!python/object:lmnet.data_processor.Sequence
+  AUGMENTOR: !!python/object:blueoil.data_processor.Sequence
     processors:
     - !!python/object:blueoil.data_augmentor.FlipLeftRight
       probability: 0.5
@@ -42,7 +42,7 @@ DATASET:
   BATCH_SIZE: 1
   DATA_FORMAT: NHWC
   ENABLE_PREFETCH: true
-  PRE_PROCESSOR: !!python/object:lmnet.data_processor.Sequence
+  PRE_PROCESSOR: !!python/object:blueoil.data_processor.Sequence
     processors:
     - !!python/object:lmnet.pre_processor.ResizeWithGtBoxes
       size: !!python/tuple
@@ -114,7 +114,7 @@ NETWORK:
   WEIGHT_QUANTIZER_KWARGS: {}
 NETWORK_CLASS: !!python/name:blueoil.networks.object_detection.lm_fyolo.LMFYoloQuantize ''
 NMS: !!python/name:lmnet.post_processor.NMS ''
-POST_PROCESSOR: !!python/object:lmnet.data_processor.Sequence
+POST_PROCESSOR: !!python/object:blueoil.data_processor.Sequence
   processors:
   - !!python/object:lmnet.post_processor.FormatYoloV2
     anchors:
@@ -150,7 +150,7 @@ POST_PROCESSOR: !!python/object:lmnet.data_processor.Sequence
 PRETRAIN_DIR: ''
 PRETRAIN_FILE: ''
 PRETRAIN_VARS: []
-PRE_PROCESSOR: !!python/object:lmnet.data_processor.Sequence
+PRE_PROCESSOR: !!python/object:blueoil.data_processor.Sequence
   processors:
   - !!python/object:lmnet.pre_processor.ResizeWithGtBoxes
     size: !!python/tuple
