--- a/dlk/examples/object_detection/fyolo_quantize_17_v14_some_1x1_wide_pact_add_conv/config.yaml
+++ b/dlk/examples/object_detection/fyolo_quantize_17_v14_some_1x1_wide_pact_add_conv/config.yaml
@@ -132,10 +132,10 @@ NETWORK:
   WEIGHT_QUANTIZER: !!python/name:lmnet.quantizations.binary.binary_channel_wise_mean_scaling_quantizer ''
   WEIGHT_QUANTIZER_KWARGS: {}
 NETWORK_CLASS: !!python/name:blueoil.networks.object_detection.fyolo_v14.FYoloQuantize ''
-NMS: !!python/name:lmnet.post_processor.NMS ''
+NMS: !!python/name:blueoil.post_processor.NMS ''
 POST_PROCESSOR: !!python/object:blueoil.data_processor.Sequence
   processors:
-  - !!python/object:lmnet.post_processor.FormatYoloV2
+  - !!python/object:blueoil.post_processor.FormatYoloV2
     anchors:
     - !!python/tuple
       - 1.3221
@@ -158,9 +158,9 @@ POST_PROCESSOR: !!python/object:blueoil.data_processor.Sequence
     - 320
     - 320
     num_classes: 20
-  - !!python/object:lmnet.post_processor.ExcludeLowScoreBox
+  - !!python/object:blueoil.post_processor.ExcludeLowScoreBox
     threshold: 0.05
-  - !!python/object:lmnet.post_processor.NMS
+  - !!python/object:blueoil.post_processor.NMS
     classes:
     - aeroplane
     - bicycle
