--- a/dlk/examples/object_detection/widerface_320/config.yaml
+++ b/dlk/examples/object_detection/widerface_320/config.yaml
@@ -113,10 +113,10 @@ NETWORK:
   WEIGHT_QUANTIZER: !!python/name:lmnet.quantizations.binary.binary_channel_wise_mean_scaling_quantizer ''
   WEIGHT_QUANTIZER_KWARGS: {}
 NETWORK_CLASS: !!python/name:blueoil.networks.object_detection.lm_fyolo.LMFYoloQuantize ''
-NMS: !!python/name:lmnet.post_processor.NMS ''
+NMS: !!python/name:blueoil.post_processor.NMS ''
 POST_PROCESSOR: !!python/object:blueoil.data_processor.Sequence
   processors:
-  - !!python/object:lmnet.post_processor.FormatYoloV2
+  - !!python/object:blueoil.post_processor.FormatYoloV2
     anchors:
     - !!python/tuple
       - 1.3221
@@ -139,9 +139,9 @@ POST_PROCESSOR: !!python/object:blueoil.data_processor.Sequence
     - 320
     - 320
     num_classes: 1
-  - !!python/object:lmnet.post_processor.ExcludeLowScoreBox
+  - !!python/object:blueoil.post_processor.ExcludeLowScoreBox
     threshold: 0.05
-  - !!python/object:lmnet.post_processor.NMS
+  - !!python/object:blueoil.post_processor.NMS
     classes:
     - face
     iou_threshold: 0.5
