--- a/dlk/examples/object_detection/fyolo_quantize_17_v14_some_1x1_wide_pact_add_conv/config.yaml
+++ b/dlk/examples/object_detection/fyolo_quantize_17_v14_some_1x1_wide_pact_add_conv/config.yaml
@@ -63,11 +63,11 @@ DATASET:
   ENABLE_PREFETCH: true
   PRE_PROCESSOR: !!python/object:blueoil.data_processor.Sequence
     processors:
-    - !!python/object:lmnet.pre_processor.ResizeWithGtBoxes
+    - !!python/object:blueoil.pre_processor.ResizeWithGtBoxes
       size:
       - 320
       - 320
-    - !!python/object:lmnet.pre_processor.DivideBy255 {}
+    - !!python/object:blueoil.pre_processor.DivideBy255 {}
 DATASET_CLASS: !!python/name:blueoil.datasets.pascalvoc_2007_2012.Pascalvoc20072012 ''
 DATA_FORMAT: NHWC
 IMAGE_SIZE:
@@ -190,11 +190,11 @@ PRETRAIN_FILE: ''
 PRETRAIN_VARS: []
 PRE_PROCESSOR: !!python/object:blueoil.data_processor.Sequence
   processors:
-  - !!python/object:lmnet.pre_processor.ResizeWithGtBoxes
+  - !!python/object:blueoil.pre_processor.ResizeWithGtBoxes
     size:
     - 320
     - 320
-  - !!python/object:lmnet.pre_processor.DivideBy255 {}
+  - !!python/object:blueoil.pre_processor.DivideBy255 {}
 SAVE_CHECKPOINT_STEPS: 10000
 SUMMARISE_STEPS: 1000
 TASK: !!python/object/apply:blueoil.common.Tasks
