--- a/blueoil/configs/example/classification.yaml
+++ b/blueoil/configs/example/classification.yaml
@@ -31,11 +31,11 @@ DATASET:
   DATA_FORMAT: NHWC
   PRE_PROCESSOR: !!python/object:blueoil.data_processor.Sequence
     processors:
-    - !!python/object:lmnet.pre_processor.Resize
+    - !!python/object:blueoil.pre_processor.Resize
       size:
       - 28
       - 28
-    - !!python/object:lmnet.pre_processor.PerImageStandardization {}
+    - !!python/object:blueoil.pre_processor.PerImageStandardization {}
 DATASET_CLASS: !!python/name:blueoil.datasets.cifar10.Cifar10 ''
 DATA_FORMAT: NHWC
 IMAGE_SIZE:
@@ -80,11 +80,11 @@ PRETRAIN_VARS:
 - 'conv6/bias:'
 PRE_PROCESSOR: !!python/object:blueoil.data_processor.Sequence
   processors:
-  - !!python/object:lmnet.pre_processor.Resize
+  - !!python/object:blueoil.pre_processor.Resize
     size:
     - 28
     - 28
-  - !!python/object:lmnet.pre_processor.PerImageStandardization {}
+  - !!python/object:blueoil.pre_processor.PerImageStandardization {}
 SAVE_CHECKPOINT_STEPS: 100
 SUMMARISE_STEPS: 10
 TASK: !!python/object/apply:blueoil.common.Tasks
