--- a/dlk/examples/classification/lmnet_quantize_cifar10_max_pooling/config_dlk.yaml
+++ b/dlk/examples/classification/lmnet_quantize_cifar10_max_pooling/config_dlk.yaml
@@ -23,12 +23,12 @@ DATASET:
     blueoil.data_processor.Sequence:
       processors:
       - 
-        lmnet.pre_processor.Resize:
+        blueoil.pre_processor.Resize:
           size:
           - 32
           - 32
       - 
-        lmnet.pre_processor.DivideBy255: {}
+        blueoil.pre_processor.DivideBy255: {}
 DATASET_CLASS: blueoil.datasets.cifar10.Cifar10
 IMAGE_SIZE:
 - 32
