--- a/dlk/examples/classification/lmnet_v1_group_conv/config.yaml
+++ b/dlk/examples/classification/lmnet_v1_group_conv/config.yaml
@@ -29,11 +29,11 @@ DATASET:
   DATA_FORMAT: NHWC
   PRE_PROCESSOR: !!python/object:blueoil.data_processor.Sequence
     processors:
-    - !!python/object:lmnet.pre_processor.Resize
+    - !!python/object:blueoil.pre_processor.Resize
       size: !!python/tuple
       - 32
       - 32
-    - !!python/object:lmnet.pre_processor.PerImageStandardization {}
+    - !!python/object:blueoil.pre_processor.PerImageStandardization {}
 DATASET_CLASS: !!python/name:blueoil.datasets.cifar10.Cifar10 ''
 DATA_FORMAT: NHWC
 IMAGE_SIZE:
@@ -74,11 +74,11 @@ PRETRAIN_FILE: ''
 PRETRAIN_VARS: []
 PRE_PROCESSOR: !!python/object:blueoil.data_processor.Sequence
   processors:
-  - !!python/object:lmnet.pre_processor.Resize
+  - !!python/object:blueoil.pre_processor.Resize
     size: !!python/tuple
     - 32
     - 32
-  - !!python/object:lmnet.pre_processor.PerImageStandardization {}
+  - !!python/object:blueoil.pre_processor.PerImageStandardization {}
 SAVE_CHECKPOINT_STEPS: 1000
 SUMMARISE_STEPS: 100
 TASK: !!python/object/apply:blueoil.common.Tasks
