--- a/dlk/examples/object_detection/widerface_v5/config.yaml
+++ b/dlk/examples/object_detection/widerface_v5/config.yaml
@@ -44,11 +44,11 @@ DATASET:
   ENABLE_PREFETCH: true
   PRE_PROCESSOR: !!python/object:blueoil.data_processor.Sequence
     processors:
-    - !!python/object:lmnet.pre_processor.ResizeWithGtBoxes
+    - !!python/object:blueoil.pre_processor.ResizeWithGtBoxes
       size:
       - 160
       - 160
-    - !!python/object:lmnet.pre_processor.DivideBy255 {}
+    - !!python/object:blueoil.pre_processor.DivideBy255 {}
 DATASET_CLASS: !!python/name:blueoil.datasets.widerface.WiderFace ''
 DATA_FORMAT: NHWC
 IMAGE_SIZE:
@@ -232,11 +232,11 @@ PRETRAIN_VARS:
 - block_13/bn/moving_variance:0
 PRE_PROCESSOR: !!python/object:blueoil.data_processor.Sequence
   processors:
-  - !!python/object:lmnet.pre_processor.ResizeWithGtBoxes
+  - !!python/object:blueoil.pre_processor.ResizeWithGtBoxes
     size:
     - 160
     - 160
-  - !!python/object:lmnet.pre_processor.DivideBy255 {}
+  - !!python/object:blueoil.pre_processor.DivideBy255 {}
 SAVE_CHECKPOINT_STEPS: 1000
 SUMMARISE_STEPS: 1000
 TASK: !!python/object/apply:blueoil.common.Tasks
