--- a/dlk/examples/segmentation/lm_segnet_v1_quantize_camvid/config.yaml
+++ b/dlk/examples/segmentation/lm_segnet_v1_quantize_camvid/config.yaml
@@ -32,7 +32,7 @@ DATASET:
   DATA_FORMAT: NHWC
   PRE_PROCESSOR: !!python/object:blueoil.data_processor.Sequence
     processors:
-    - !!python/object:lmnet.pre_processor.DivideBy255 {}
+    - !!python/object:blueoil.pre_processor.DivideBy255 {}
 DATASET_CLASS: !!python/name:blueoil.datasets.camvid.Camvid ''
 DATA_FORMAT: NHWC
 IMAGE_SIZE:
@@ -64,7 +64,7 @@ PRETRAIN_FILE: ''
 PRETRAIN_VARS: []
 PRE_PROCESSOR: !!python/object:blueoil.data_processor.Sequence
   processors:
-  - !!python/object:lmnet.pre_processor.DivideBy255 {}
+  - !!python/object:blueoil.pre_processor.DivideBy255 {}
 SAVE_CHECKPOINT_STEPS: 3000
 SUMMARISE_STEPS: 1000
 TASK: !!python/object/apply:blueoil.common.Tasks
