--- a/.buildkite/lmnet-pipeline.yml
+++ b/.buildkite/lmnet-pipeline.yml
@@ -1,5 +1,5 @@
 steps:
-  - command: "make test-lmnet-main"
+  - command: "make test-unit-main"
     label: "main"
     agents:
     - "agent-type=gpu"
