Change buildkite pipeline name

--- a/.buildkite/lmnet-pipeline.yml
+++ b/.buildkite/lmnet-pipeline.yml
@@ -7,7 +7,7 @@ steps:
     timeout_in_minutes: "30"
     env:
       BUILDKITE_CLEAN_CHECKOUT: 'true'
-  - command: "make test-lmnet-pep8"
+  - command: "make test-blueoil-pep8"
     label: "pep8"
     agents:
     - "agent-type=normal"
