Fix output_template, setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -47,6 +47,11 @@ test =
   pytest-xdist==1.30.0
   parameterized==0.7.0
 
+[options.extras_require]
+validate =
+  pycodestyle
+  autopep8
+
 [options.entry_points]
 console_scripts =
     blueoil = blueoil.cmd.main:main
