--- a/setup.cfg
+++ b/setup.cfg
@@ -29,7 +29,7 @@ install_requires =
 
 [options.extras_require]
 cpu =
-  tensorflow==1.15.2
+  tensorflow-cpu==1.15.2
 gpu =
   tensorflow-gpu==1.15.2
   gast==0.2.2
